# webrtc-vad

./: .gitignore  CMakeLists.txt  README.md  ffi_vad.c  sample_buffer_cut.c  simple_buffer_cut.c
data/: human_16000_s16le_1.pcm
python/: libvad.py  sample_buffer_cut.py
test/: ffi_bytes_sample.py  ffi_cal.c  gcc_build_shared.sh
